--- a/app/views/invitations/_invite_users.html.haml
+++ b/app/views/invitations/_invite_users.html.haml
@@ -1,4 +1,4 @@
-- if @group.is_a_subgroup?
+- if @group.is_subgroup?
   %h3= t("invitation.by_email")
 .control-group
   %p= t("invitation.recipients")
