--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -6,10 +6,10 @@
       %h1= @user.name
       %p.username= "@" + @user.username
 
-      - groups = @user.public_groups.order('full_name ASC')
+      - groups = @user.visible_to_public_groups.order('full_name ASC')
       - if groups.present?
         %h3#user-groups-list= t(:groups)
         %ul
-        - groups.each do |group|
-          %li
-            = link_to group.full_name, group_path(group)
+          - groups.each do |group|
+            %li
+              = link_to group.full_name, group_path(group)
