--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -8,7 +8,15 @@
     - if can?(:add_members, @group)
       = render 'invite_button', group: @group, discussion: @discussion
     = render 'options_dropdown', group: @group
-    = request_membership_button(@group)
+
+    - unless current_user_or_vistor.is_group_member? @group
+      - case @group.membership_granted_upon
+      - when "request"
+        = join_group_button(@group)
+      - when "approval"
+        = request_membership_button(@group)
+      - when "invitation"
+        = "Membership by invitation only"
 
 .row.main-content
   =render 'discussions/discussion_list'
@@ -17,24 +25,19 @@
     / =render 'subscription_prompt' if show_subscription_prompt?(@group)
     =render 'groups/description', group: @group
     =render 'subgroups', subgroups: @subgroups, group: @group if display_subgroups_block?(@group)
-    - if can? :show, @group
-      - if @closed_motions.exists?
-        .sub-panel.previous-discussions-panel
-          %h4= t(:previous_decisions)
-          %ul.previous-decisions
-            - @closed_motions.first(3).each do |motion|
-              %li.previous-decision
-                %a.selector-link{ href: motion_path(motion) }
-                  .clearfix
-                    .pie.motion-sparkline
-                      -values = motion.vote_counts.values
-                      -if values.sum == 0
-                        0,0,0,0,1
-                      -else
-                        =values.join(',')
-                    .previous-decision-title.word-break=truncate(motion.name, :length => 60, :separator => ' ')
-
+    - if @closed_motions.any?
+      .sub-panel.previous-discussions-panel
+        %h4= t(:previous_decisions)
+        %ul.previous-decisions
+          - @closed_motions.first(3).each do |motion|
+            %li.previous-decision
+              %a.selector-link{ href: motion_path(motion) }
+                .clearfix
+                  .pie.motion-sparkline
+                    = motion_sparkline(motion)
+                  .previous-decision-title.word-break=truncate(motion.name, :length => 60, :separator => ' ')
           = link_to t(:see_more), group_motions_path(@group), class: 'bottom-panel-link'
+
     =render 'membership_requests', group: @group
     =render 'members', group: @group
   =render '/application/closed_motions', user: nil, group: @group
