--- a/app/views/motions/_motion_preview.html.haml
+++ b/app/views/motions/_motion_preview.html.haml
@@ -17,8 +17,4 @@
             - else
               = t(:proposal_closed_when, when: time_ago_in_words(motion.closed_at))
       .pie.motion-sparkline
-        -values = motion.vote_counts.values
-        -if values.sum == 0
-          0,0,0,0,1
-        -else
-          =values.join(',')
+        = motion_sparkline(motion)
