--- a/app/views/discussions/_prompt_logged_in_user_to_join_modal.html.haml
+++ b/app/views/discussions/_prompt_logged_in_user_to_join_modal.html.haml
@@ -1,10 +1,10 @@
 .modal.hide#prompt-user-to-join-or-authenticate
   .modal-header
     %h3= t :"prompt_user_to_join.header"
-    %button.close{"data-dismiss" => "modal"}×
+    %button.close{"data-dismiss" => "modal"} ×
   .modal-body
     %p= t :"prompt_user_to_join.body"
   .modal-footer
-    =link_to t(:ask_to_join_group), group_ask_to_join_path(@group), class: "btn btn-large btn-primary", id: "align-button"
+    =join_group_button(@group, class: "btn btn-large btn-primary", id: "align-button")
 
 = render 'discussions/js_prompt_user_to_join_or_authenticate'
