--- a/app/views/discussions/_prompt_logged_out_user_to_authenticate_or_signup_modal.html.haml
+++ b/app/views/discussions/_prompt_logged_out_user_to_authenticate_or_signup_modal.html.haml
@@ -7,6 +7,6 @@
     %p= t :"prompt_user_to_join.body"
   .modal-footer
     =link_to t(:log_in), new_user_session_path, class: "btn btn-large btn-success"
-    =link_to t(:ask_to_join_group), group_ask_to_join_path(@group), class: "btn btn-large btn-primary", id: "align-button"
+    =join_group_button(@group, class: "btn btn-large btn-primary", id: "align-button")
 
 = render 'discussions/js_prompt_user_to_join_or_authenticate'
