--- a/app/views/application/_groups_tree.html.haml
+++ b/app/views/application/_groups_tree.html.haml
@@ -12,3 +12,5 @@
           -else
             -name = group.name
           = name.length < 43 ? name : name[0..40]+'...'
+    %br
+    = debug_host_needed_to_link_to?(group)
