--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -5,7 +5,6 @@
   = f.input :name, label: 'Group name'
   = f.input :description, as: :text
 
-
   = f.input :visible_to,
             label: t(:'group_form.visible_to.label'),
             as: :radio_buttons,
@@ -35,9 +34,9 @@
   = f.input :discussion_privacy_options,
             label: t(:'group_form.discussion_privacy_options.label'),
             as: :radio_buttons,
-            collection: [[t(:'group_form.discussion_privacy_options.public_only'), :public_only],
-                         [t(:'group_form.discussion_privacy_options.public_or_private'), :public_or_private],
-                         [t(:'group_form.discussion_privacy_options.private_only'), :private_only]]
+            collection: [[t(:'group_form.discussion_privacy_options.public_only_html'), :public_only],
+                         [t(:'group_form.discussion_privacy_options.public_or_private_html'), :public_or_private],
+                         [t(:'group_form.discussion_privacy_options.private_only_html'), :private_only]]
 
   = f.input :parent_id, :as => :hidden
   = f.submit submit_text, class: 'btn btn-info', id: 'group_form_submit', :data => { :disable_with => submit_text }
