--- a/app/views/discussions/_form.html.haml
+++ b/app/views/discussions/_form.html.haml
@@ -17,15 +17,24 @@
       - if discussion.group.present? and discussion.group.beta_feature_enabled?('discussion_iframe') and can?(:update, discussion.group)
         =f.input :iframe_src
 
-      - if discussion.group.present? and discussion.group.is_hidden_from_public?
-        .hidden-group-discussion-privacy
-          %h3.header= t :'simple_form.labels.group.privacy'
-          %i.fa.fa-lock
-          %span.subhead= t :'simple_form.labels.discussion.privacy_private_header'
-          .description= t :'simple_form.labels.discussion.privacy_hidden_description'
-          = f.input_field :private, as: :hidden, value: true
-      - else
-        = f.input :private, as: :radio_buttons, collection: discussion_privacy_options(discussion), label: t('simple_form.labels.group.privacy')
+      - if discussion.group.present?
+        - group = discussion.group
+        - if group.private_discussions_only?
+          .hidden-group-discussion-privacy
+            %h3.header= t :'simple_form.labels.group.privacy'
+            %i.fa.fa-lock
+            %span.subhead= t :'simple_form.labels.discussion.privacy_private_header'
+            .description= t :'simple_form.labels.discussion.privacy_hidden_description'
+            = f.input_field :private, as: :hidden, value: true
+        - elsif group.public_discussions_only?
+          .hidden-group-discussion-privacy
+            %h3.header= t :'simple_form.labels.group.privacy'
+            %i.fa.fa-unlock
+            %span.subhead= t :'simple_form.labels.discussion.privacy_public_header'
+            .description= t :'simple_form.labels.discussion.privacy_public_description'
+            = f.input_field :private, as: :hidden, value: false
+        - else
+          = f.input :private, as: :radio_buttons, collection: discussion_privacy_options(discussion), label: t('simple_form.labels.group.privacy')
       = f.input 'uses_markdown', as: :hidden, id: 'global-uses-markdown'
       = f.submit :class => "btn btn-large btn-info", id: "discussion-submit", :data => {:disable_with => t(:saving)}
       = render 'application/hint', text: t(:"hint.discussion"), anchor: 'starting-an-engaging-discussion'
