--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -1,5 +1,11 @@
 - form_params ||= {}
-- form_params.merge!({validate: true, html: {'data-current-privacy' => group.privacy}})
+
+- form_data = {is_editing: group.persisted?,
+               previous_discussion_privacy_options: group.discussion_privacy_options,
+               confirm_all_discussions_will_be_made_private_message: t(:'group_form.confirm_all_discussions_will_be_made_private_message'),
+               confirm_all_discussions_will_be_made_public_message: t(:'group_form.confirm_all_discussions_will_be_made_public_message')}
+
+- form_params.merge!(validate: true, html: {data: form_data, class: 'group-settings'})
 
 = simple_form_for group, form_params do |f|
   = f.input :name, label: 'Group name'
