--- a/app/views/groups/_privacy_dropdown.html.haml
+++ b/app/views/groups/_privacy_dropdown.html.haml
@@ -1,9 +1,7 @@
 .dropdown.privacy-dropdown
-  - privacy = group.privacy
-  - header = t "simple_form.labels.group.privacy_#{privacy}_header"
-  - description = t "simple_form.labels.group.privacy_#{privacy}_description"
-  %span#privacy{"data-title" => "#{header}: #{description}", 'data-container'=> 'body' }
-    - image_html = image_tag("privicon_"+privacy.to_s+".png", alt: privacy.to_s, :id => 'privacy-image')
+  - privacy = group.is_visible_to_public? ? 'public' : 'private'
+  %span#privacy
+    - image_html = image_tag("privicon_"+privacy+".png", alt: privacy, :id => 'privacy-image')
     - if can? :edit, group
       = link_to image_html, edit_group_path(group)
     - else
