--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,22 +1,26 @@
 .row
-  .span9.group-heading
-    - set_title @group.name, "", @group.parent
-    = render '/groups/title', group: @group, discussion: @discussion
-    - if can? :create, @discussion
-      = icon_button(href: new_discussion_path(:group_id => @group.id), text: t(:start_a_discussion), icon: '/assets/topic-18.png', id: 'start-new-discussion', class: 'btn-grey')
-  .span3#button-container
-    - if can?(:add_members, @group)
-      = render 'invite_button', group: @group, discussion: @discussion
-    = render 'options_dropdown', group: @group
+  .span9
+    .group-heading
+      - set_title @group.name, "", @group.parent
+      = render '/groups/title', group: @group, discussion: @discussion
+    .group-description
+      ~ render_rich_text(@group.description)
 
-    - unless current_user_or_visitor.is_group_member? @group
-      = join_group_button(@group)
+    .row
+      .main-content
+        =render 'discussions/discussion_list'
 
-.row.main-content
-  =render 'discussions/discussion_list'
   %section.span3
+    #group-actions
+      - if can? :create, @discussion
+        = icon_button(href: new_discussion_path(:group_id => @group.id), text: t(:start_a_discussion), icon: '/assets/topic-18.png', id: 'start-new-discussion', class: 'btn-grey')
+      - if can?(:add_members, @group)
+        = render 'invite_button', group: @group, discussion: @discussion
+      = render 'options_dropdown', group: @group
+
+      - unless current_user_or_visitor.is_member_of? @group
+        = join_group_button(@group)
     =render 'setup_next_steps' if show_next_steps?(@group)
-    =render 'groups/description', group: @group
     =render 'subgroups', subgroups: @subgroups, group: @group if display_subgroups_block?(@group)
     - if @closed_motions.any?
       .sub-panel.previous-discussions-panel
