--- a/app/views/application/_groups_dropdown.html.haml
+++ b/app/views/application/_groups_dropdown.html.haml
@@ -1,5 +1,5 @@
 %li.nav-item.dropdown.left-side#groups
-  %a.nav-link{href: "#",  class: 'dropdown-toggle', 'data-toggle' => 'dropdown'}
+  %a.nav-link.dropdown-toggle.groups-dropdown-btn{href: "#", 'data-toggle' => 'dropdown'}
     %i.fa.fa-group
     %span= t :groups
   %ul.dropdown-menu
