--- a/app/assets/stylesheets/unstructured/_groups.css.scss
+++ b/app/assets/stylesheets/unstructured/_groups.css.scss
@@ -144,34 +144,10 @@ body.groups {
     color: #727272;
     display: inline;
   }
-  .privacy-dropdown {
-    display: inline;
-    width: 120px;
-    bottom: 5px;
-  }
-  .privacy-dropdown .dropdown-menu a { padding-left: 5px; }
-  li.privacy-item i {
-    display: inline-block;
-    width: 15px;
-  }
-  .privacy-dropdown form {
-    margin: 0px;
-    display: inline;
-  }
-  li.privacy-item button {
-    border: none;
-    border-radius: 0px;
-    -webkit-border-radius: 0px;
-    margin-bottom: 0px;
-    box-shadow: none;
-    width: 180px;
-    padding-left: 25px;
-    text-align: left;
-  }
-  li.privacy-item button:hover {
-    color: white;
-    background-color: #08c;
-  }
+}
+
+#group-privacy-label {
+  font-size: .8em;
 }
 
 .name-separator {
