--- a/app/views/user_mailer/missed_yesterday/_new_vote.html.haml
+++ b/app/views/user_mailer/missed_yesterday/_new_vote.html.haml
@@ -8,5 +8,5 @@
     %td.content
       %b= vote.author.name
       - past_tense_position = I18n.t("position_verbs.past_tense.#{position}")
-      = t('notifications.new_vote', position: past_tense_position)
+      %em= t('notifications.new_vote', position: past_tense_position)
       = render_email_plaintext vote.statement
