--- a/app/views/layouts/fake_email.html.haml
+++ b/app/views/layouts/fake_email.html.haml
@@ -1,5 +1,5 @@
 = render '/application/mailer_doctype'
 %html
-  = stylesheet_link_tag "wall"
+  = stylesheet_link_tag "missed_yesterday"
   %body
     = yield
