--- a/app/views/wall/show.html.haml
+++ b/app/views/wall/show.html.haml
@@ -1,9 +1,10 @@
-%h1 Here's what you missed on Loomio yesterday
-
+%strong= "Subject:  #{t("email.missed_yesterday.subject")}"
 - @user.inbox_groups.each do |group|
   - next unless @discussions_by_group.has_key?(group)
   - @discussions_by_group[group].each do |discussion|
-    = render 'wall/light/discussion', discussion: discussion
+
+    %h1= link_to discussion.group_full_name, group_url(discussion.group)
+    = render 'user_mailer/missed_yesterday/discussion', discussion: discussion
 
 = link_to t(:'mark_all_as_read'), '#'
 
