--- a/app/assets/stylesheets/missed_yesterday.css.scss
+++ b/app/assets/stylesheets/missed_yesterday.css.scss
@@ -1,6 +1,8 @@
-html{width: 600px;}
+.everything{width: 600px;}
 .icon { width: 50px; vertical-align: top }
 .light-discussion .icon img { width: 40px }
+.light-discussion .description {margin-bottom: 1em;}
+.activity-feed {margin-top: 1em;}
 .light-proposal .icon img { width: 50px; padding-top: 10px }
 table { width: 600px }
 .content { width: 550px }
