--- a/app/views/user_mailer/missed_yesterday.html.haml
+++ b/app/views/user_mailer/missed_yesterday.html.haml
@@ -1,10 +1,9 @@
 = render '/application/mailer_doctype'
 %html
-  %h1= t(:'email.missed_yesterday.title')
+  .everything
+    - @user.inbox_groups.each do |group|
+      - next unless @discussions_by_group.has_key?(group)
+      - @discussions_by_group[group].each do |discussion|
+        = render 'user_mailer/missed_yesterday/discussion', discussion: discussion
 
-  - @user.inbox_groups.each do |group|
-    - next unless @discussions_by_group.has_key?(group)
-    - @discussions_by_group[group].each do |discussion|
-      = render 'user_mailer/missed_yesterday/discussion', discussion: discussion
-
-  =render 'unsubscribe_link'
+    =render 'unsubscribe_link'
