--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -1,17 +1,27 @@
 - if current_user.parent_groups.present?
   .row
-    .span9
+    .span6
       .group-title
         %h1.home-title
           = link_to t(:home), dashboard_path
-      .row
-        .span9.main-content
-          =render 'discussions/discussion_list'
+    .span3
+      .pull-right
+        %strong
+          Filter:
+        %a.btn.active
+          Unread
+        %a.btn
+          Watching
+    .span3
+      = icon_button(href: new_discussion_path, text: t(:start_a_discussion), icon: '/assets/topic-18.png', id: 'start-new-discussion', class: 'btn-grey')
+
+  .row
+    .span9.main-content
+      =render 'discussions/discussion_list'
 
     %section.span3
       #group-actions
         .clearfix
-          = icon_button(href: new_discussion_path, text: t(:start_a_discussion), icon: '/assets/topic-18.png', id: 'start-new-discussion', class: 'btn-grey')
       =render 'groups'
       .sub-panel.previous-discussions-panel
         %h4= t(:previous_decisions)
