--- a/app/views/discussions/_discussion_context.html.haml
+++ b/app/views/discussions/_discussion_context.html.haml
@@ -24,15 +24,12 @@
           who: @discussion.author.name,
           link: user_path(@discussion.author),
           link_class: 'user-name')
-      -if @discussion.originator.present?
-        - last_collaborator = @discussion.last_collaborator
+      - if @discussion.has_previous_versions?
         .last-edited-by
-          = t("discussion_context.last_edited_html",
-              when: time_ago_in_words(@discussion.last_versioned_at),
-              who: last_collaborator.name,
-              link: user_path(last_collaborator),
-              link_class: 'user-name')
-        .see-revision-history
-          %i.fa.fa-time
-          =link_to t("discussion_context.see_revision_history"), show_description_history_discussion_path(@discussion), :method => :post, :class => "see-description-history", :remote => true
+          =link_to t(:"discussion_context.edited", when: time_ago_in_words(@discussion.last_versioned_at)), show_description_history_discussion_path(@discussion), :method => :post, :class => "see-description-history", :remote => true
+      .subscription-status
+        %a.btn.btn-small.btn-block{href: '#'}
+          Unsubscribe
+        %p You're receiving notifications because you're subscribed to this discussion.
+
 #description-revision-history.modal.hidden
